apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app: jellyfin
