apps/jellyfin/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-internal
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.${DOMAIN}`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
