apps/jellyfin/virtual-service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jellyfin
  namespace: media
spec:
  hosts:
    - jellyfin.${INTERNAL_DOMAIN}
  gateways:
    - istio-ingress/sentinel-gateway
  http:
    - route:
        - destination:
            host: jellyfin.media.svc.cluster.local
            port:
              number: 8096
